# gobang-tui

./: .gitignore  CMakeLists.txt  README.md  TODO.md
algo/: ac2.cpp  algo.cpp  solve.cpp
include/: board.h  game.cpp  game.h  match.h  solve.h  status.h
src/: board.cpp  game.cpp  main.cpp  match.cpp  status.cpp
